// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SitemapSection component renders correctly 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-module_title__sia8j Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
        >
          Main
        </h2>
        <div
          class="SitemapBlock"
        >
          <div
            class="MasonryGrid-module_MasonryGrid__ZknAQ"
          >
            <div
              class="MasonryGrid-module_column__aCcAR"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h4 MuiTypography-gutterBottom"
                >
                  Get in touch
                </h4>
                <div
                  class="SitemapBlock SitemapBlock--child"
                >
                  <div>
                    <h6
                      class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h6 MuiTypography-gutterBottom"
                    >
                      <a
                        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
                        type="button"
                      >
                        <span>
                          +44 (0) 1234567890
                        </span>
                      </a>
                    </h6>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MasonryGrid-module_column__aCcAR"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h4 MuiTypography-gutterBottom"
                >
                  About BMI
                </h4>
                <div
                  class="SitemapBlock SitemapBlock--child"
                >
                  <div>
                    <h6
                      class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h6 MuiTypography-gutterBottom"
                    >
                      <a
                        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
                        type="button"
                      >
                        <span>
                          Our story
                        </span>
                      </a>
                    </h6>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SitemapSection component renders correctly if incomplete 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-module_title__sia8j Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
        />
        <div
          class="SitemapBlock"
        >
          <div
            class="MasonryGrid-module_MasonryGrid__ZknAQ"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
